docs/api/qiskit-ibm-provider/0.7/qiskit_ibm_provider.transpiler.passes.scheduling.PadDelay.mdx
---
title: PadDelay
description: API reference for qiskit_ibm_provider.transpiler.passes.scheduling.PadDelay
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_provider.transpiler.passes.scheduling.PadDelay
---

# PadDelay

<Class id="qiskit_ibm_provider.transpiler.passes.scheduling.PadDelay" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-ibm-provider/tree/stable/0.7/qiskit_ibm_provider/transpiler/passes/scheduling/pad_delay.py" signature="PadDelay(fill_very_end=True, schedule_idle_qubits=False)">
  Padding idle time with Delay instructions.

  Consecutive delays will be merged in the output of this pass.

  The ASAP-scheduled circuit output may become

  ```python
       ┌────────────────┐
  q_0: ┤ Delay(160[dt]) ├──■──
       └─────┬───┬──────┘┌─┴─┐
  q_1: ──────┤ X ├───────┤ X ├
             └───┘       └───┘
  ```

  Note that the additional idle time of 60dt on the `q_0` wire coming from the duration difference between `Delay` of 100dt (`q_0`) and `XGate` of 160 dt (`q_1`) is absorbed in the delay instruction on the `q_0` wire, i.e. in total 160 dt.

  See [`BlockBasePadder`](qiskit_ibm_provider.transpiler.passes.scheduling.BlockBasePadder "qiskit_ibm_provider.transpiler.passes.scheduling.BlockBasePadder") pass for details.

  Create new padding delay pass.

  **Parameters**

  *   **fill\_very\_end** (`bool`) – Set `True` to fill the end of circuit with delay.
  *   **schedule\_idle\_qubits** (`bool`) – Set to true if you’d like a delay inserted on idle qubits. This is useful for timeline visualizations, but may cause issues for execution on large backends.

  ## Attributes

  <span id="paddelay-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit_ibm_provider.transpiler.passes.scheduling.PadDelay.is_analysis_pass" name="is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="paddelay-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit_ibm_provider.transpiler.passes.scheduling.PadDelay.is_transformation_pass" name="is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="paddelay-call" />

  ### \_\_call\_\_

  <Function id="qiskit_ibm_provider.transpiler.passes.scheduling.PadDelay.__call__" name="__call__" signature="PadDelay.__call__(circuit, property_set=None)">
    Runs the pass on circuit.

    **Parameters**

    *   **circuit** (*QuantumCircuit*) – The dag on which the pass is run.
    *   **property\_set** (*PropertySet | dict | None*) – Input/output property set. An analysis pass might change the property set in-place.

    **Return type**

    QuantumCircuit

    **Returns**

    If on transformation pass, the resulting QuantumCircuit. If analysis pass, the input circuit.
  </Function>

  <span id="paddelay-execute" />

  ### execute

  <Function id="qiskit_ibm_provider.transpiler.passes.scheduling.PadDelay.execute" name="execute" signature="PadDelay.execute(passmanager_ir, state, callback=None)">
    Execute optimization task for input Qiskit IR.

    **Parameters**

    *   **passmanager\_ir** (`Any`) – Qiskit IR to optimize.
    *   **state** ([`PassManagerState`](/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v0.45)")) – State associated with workflow execution by the pass manager itself.
    *   **callback** (`Optional`\[`Callable`]) – A callback function which is caller per execution of optimization task.

    **Return type**

    `tuple`\[`Any`, [`PassManagerState`](/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v0.45)")]

    **Returns**

    Optimized Qiskit IR and state of the workflow.
  </Function>

  <span id="paddelay-name" />

  ### name

  <Function id="qiskit_ibm_provider.transpiler.passes.scheduling.PadDelay.name" name="name" signature="PadDelay.name()">
    Name of the pass.

    **Return type**

    `str`
  </Function>

  <span id="paddelay-run" />

  ### run

  <Function id="qiskit_ibm_provider.transpiler.passes.scheduling.PadDelay.run" name="run" signature="PadDelay.run(dag)">
    Run the padding pass on `dag`.

    **Parameters**

    **dag** ([`DAGCircuit`](/api/qiskit/qiskit.dagcircuit.DAGCircuit "(in Qiskit v0.45)")) – DAG to be checked.

    **Returns**

    DAG with idle time filled with instructions.

    **Return type**

    DAGCircuit

    **Raises**

    **TranspilerError** – When a particular node is not scheduled, likely some transform pass is inserted before this node is called.
  </Function>

  <span id="paddelay-update-status" />

  ### update\_status

  <Function id="qiskit_ibm_provider.transpiler.passes.scheduling.PadDelay.update_status" name="update_status" signature="PadDelay.update_status(state, run_state)">
    Update workflow status.

    **Parameters**

    *   **state** ([`PassManagerState`](/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v0.45)")) – Pass manager state to update.
    *   **run\_state** (`RunState`) – Completion status of current task.

    **Return type**

    [`PassManagerState`](/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v0.45)")

    **Returns**

    Updated pass manager state.
  </Function>
</Class>

